# compacting_bill_simpler

./: .gitignore  README.md  main.py  pyproject.toml
src/compacting_bill_simpler/: __init__.py  input_files.py  text_processing.py
src/compacting_bill_simpler/regulatory/: __init__.py  cli.py  config.py  cost_tracker.py  llm_profiles.py  models.py  orchestrator.py  pipeline_profile.py
src/compacting_bill_simpler/regulatory/stages/: __init__.py  chunk.py  document_signals.py  extract.py  ingest.py  segment.py  structure.py
tests/: test_cost_tracker.py  test_segment_chunk.py  test_structure_extract.py  test_trace.py
